html5up-prologue/assets/css/main.css
/* ... */
/* Mobile */

	@media screen and (max-width: 736px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 14pt;
			}

			h2 {
				font-size: 1.5em;
				letter-spacing: 0;
				font-weight: 300;
			}

			.container {
				padding: 0 15px 0 15px;
			}

		/* List */

			ul.icons a {
				width: 2em;
				font-size: 1.25em;
			}

		/* Main */

			#main > section {
				padding: 2em 0;
			}

			#main section.cover {
				padding: 4em 0em;
			}

				#main section.cover header {
					padding: 0 1em;
				}

		/* Footer */

			#footer .copyright li {
				display: block;
				line-height: 1.25em;
				border: 0;
				padding: 0;
				margin: 1em 0 0 0;
			}

				#footer .copyright li:first-child {
					margin-top: 0;
				}

	}






	/* MY CODE ===============================================================================================
	=================================================MY CODE=====================================================*/ 

	#top {
		padding-bottom:80px !important;
		padding-top:30px !important
	}

	#top img {
		max-width: 300px
	}

	#portfolio .projects a:hover{
		transform: scale(1.05);
	}

	.img_container {
		
		display:flex;
		justify-content: center;
	}

	.img_container a {
		display: flex;
		justify-content: center;
		width:60%
		!important
		
	}
	


	/* .cafePreview:hover {
		transform:scale(1.05);
		transition: 0.5s ease-in-out
	}

	.salonPreview:hover {
		transform:scale(1.05);
		transition: 0.5s ease-in-out
	} */

	/*PORTFOLIO=========================================================================*/ 

	.projects {
		display:flex;
		justify-content: space-evenly;
	}

	.projects div {
		display:flex;
		flex-direction:column;
		align-items: center;
		padding: 0 3% 0 3%;
		
	}

	.projects div img {
		max-width: 250px;
		height: 300px;
		margin-bottom:20px;
		margin-top:20px
	}

	.projects div h3 {
		margin-bottom: 20px
	}

	.projects a{
		border-bottom:none;
	}

	.projects p {
		margin-bottom:20px
	}

	.projects a:hover{
		color:black;
		border: 3px solid black;
		border-radius: 20px;
		transition: 0.35s ease-in-out
	}


	
	/* ================================================================================== ABOUT ME =================================================== */ 

	#about img {
		border: 6px solid #8ebebc;
		border-radius: 20px;
	}

	
	@media (max-width: 900px){
		.projects {
			display:flex;
			flex-direction: column;
			justify-content: space-evenly;
			align-items: center;
		}

		.projects p {
			max-width:60%
		}
	}

